--- a/app/src/main/res/layout/layout_app_bar_movies_search.xml
+++ b/app/src/main/res/layout/layout_app_bar_movies_search.xml
@@ -22,29 +22,40 @@
             android:scaleType="centerCrop"
             android:src="@drawable/back_arrow" />
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/btnAppBarSearchMoviesSearch"
-            android:layout_width="@dimen/width_btn_back_movies_details"
-            android:layout_height="@dimen/height_btn_back_movies_details"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/margin_medium_4_n"
-            android:scaleType="centerCrop"
-            app:srcCompat="@drawable/ic_baseline_search_white_24dp" />
+<!--        <androidx.appcompat.widget.AppCompatImageView-->
+<!--            android:id="@+id/btnAppBarSearchMoviesSearch"-->
+<!--            android:layout_width="@dimen/width_btn_back_movies_details"-->
+<!--            android:layout_height="@dimen/height_btn_back_movies_details"-->
+<!--            android:layout_gravity="center_vertical"-->
+<!--            android:layout_marginStart="@dimen/margin_medium_4_n"-->
+<!--            android:scaleType="centerCrop"-->
+<!--            app:srcCompat="@drawable/ic_baseline_search_white_24dp" />-->
 
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/etCinemaNameMoviesSearch"
+<!--        <androidx.appcompat.widget.AppCompatEditText-->
+<!--            android:id="@+id/etCinemaNameMoviesSearch"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center_vertical"-->
+<!--            android:layout_marginStart="@dimen/margin_14dp"-->
+<!--            android:cursorVisible="true"-->
+<!--            android:backgroundTint="@color/colorPrimary"-->
+<!--            android:fontFamily="@font/inter"-->
+<!--            android:hint="@string/lbl_search_the_movies"-->
+<!--            android:inputType="text"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textColorHint="#444444"-->
+<!--            android:textSize="@dimen/text_regular" />-->
+
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/searchViewMoviesHome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="@dimen/margin_14dp"
-            android:cursorVisible="true"
-            android:backgroundTint="@color/colorPrimary"
-            android:fontFamily="@font/inter"
-            android:hint="@string/lbl_search_the_movies"
-            android:inputType="text"
-            android:textColor="@color/white"
-            android:textColorHint="#444444"
-            android:textSize="@dimen/text_regular" />
+            android:visibility="visible"
+            app:iconifiedByDefault="false"
+            app:queryBackground="@android:color/transparent"
+            app:queryHint="Search the movies"
+            app:searchIcon="@drawable/ic_baseline_search_white_24dp" />
 
     </LinearLayout>
 
