--- a/app/src/main/res/layout/view_holder_movies_details_cast_list.xml
+++ b/app/src/main/res/layout/view_holder_movies_details_cast_list.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="wrap_content"
-    android:background="@android:color/transparent"
+    android:background="@color/colorPrimary"
     android:layout_height="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView
