--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,11 +7,11 @@
         <item name="colorAccent">@color/colorAccent</item>
 
         <item name="colorOnSecondary">@color/white</item>
-
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/colorPrimaryDark</item>
-
         <!-- Customize your theme here. -->
+        <item name="android:editTextColor">@android:color/white</item>
+        <item name="android:textColorHint">#444444</item>
     </style>
     
     <style name="Theme.TheMovieBookingApp.SplashScreenTheme" parent="Theme.TheMovieBookingApp">
