--- a/app/src/main/res/layout/view_holder_movies_cinema_cinemas_list.xml
+++ b/app/src/main/res/layout/view_holder_movies_cinema_cinemas_list.xml
@@ -10,10 +10,10 @@
         android:id="@+id/tvCinemaNameMoviesCinema"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_marginStart="@dimen/margin_large"
         android:layout_marginTop="@dimen/margin_15dp"
         android:layout_marginEnd="@dimen/margin_large"
-        android:layout_alignParentStart="true"
         android:text="JCGV : Junction City"
         android:textAppearance="@style/TextInterWhiteSemiBold16sp" />
 
@@ -34,10 +34,10 @@
         android:id="@+id/llCinemaStuffs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_large"
-        android:layout_marginEnd="@dimen/margin_large"
         android:layout_below="@+id/tvCinemaNameMoviesCinema"
+        android:layout_marginStart="@dimen/margin_large"
         android:layout_marginTop="@dimen/margin_21dp"
+        android:layout_marginEnd="@dimen/margin_large"
         android:layout_marginBottom="@dimen/margin_10dp"
         android:orientation="horizontal">
 
@@ -95,8 +95,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/llCinemaStuffs"
-        android:visibility="visible"
         android:layout_marginTop="@dimen/margin_10dp"
+        android:layout_marginStart="@dimen/margin_small_smaller"
+        android:layout_marginEnd="@dimen/margin_small_smaller"
+        android:visibility="visible"
         tools:itemCount="3"
         tools:listitem="@layout/view_holder_movies_cinema_cinema_times_list" />
 
