--- a/app/src/main/res/layout/view_holder_movies_cinema_date_cards_list.xml
+++ b/app/src/main/res/layout/view_holder_movies_cinema_date_cards_list.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_marginStart="10dp"
     android:layout_marginEnd="20dp"
-    android:background="@color/colorPrimary"
-    android:layout_height="wrap_content">
+    android:background="@color/colorPrimary">
 
     <RelativeLayout
+        android:id="@+id/dateCardTimeSlot"
         android:layout_width="71dp"
-        android:paddingTop="@dimen/margin_card_medium"
-        android:paddingBottom="@dimen/margin_10dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/date_card_background"
-        android:layout_height="wrap_content">
+        android:paddingTop="@dimen/margin_card_medium"
+        android:paddingBottom="@dimen/margin_10dp">
 
         <View
             android:id="@+id/vHoleDateCard"
@@ -21,28 +23,28 @@
             android:background="@drawable/date_card_hole_background" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvDateMoviesCinema"
+            android:id="@+id/tvDayOfWeekMoviesCinema"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/vHoleDateCard"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="9dp"
             android:fontFamily="@font/inter_bold"
-            android:text="Today"
             android:textColor="@color/black"
-            android:textSize="@dimen/text_regular" />
+            android:textSize="@dimen/text_regular"
+            tools:text="Today" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvMonthMoviesCinema"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvDateMoviesCinema"
+            android:layout_below="@+id/tvDayOfWeekMoviesCinema"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="7dp"
             android:fontFamily="@font/inter_bold"
-            android:text="May"
             android:textColor="@color/black"
-            android:textSize="@dimen/text_regular" />
+            android:textSize="@dimen/text_regular"
+            tools:text="May" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -51,35 +53,34 @@
             android:layout_marginTop="5dp">
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tvDayMoviesCinema"
+                android:id="@+id/tvDayOfMonthMoviesCinema"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:fontFamily="@font/inter_bold"
-                android:text="8"
                 android:textColor="@color/black"
-                android:textSize="@dimen/text_regular_2x" />
+                android:textSize="@dimen/text_regular_2x"
+                tools:text="8" />
 
             <View
                 android:layout_width="10dp"
                 android:layout_height="10dp"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="-5dp"
                 android:layout_centerVertical="true"
+                android:layout_marginEnd="-5dp"
                 android:background="@drawable/date_card_hole_background" />
 
             <View
                 android:layout_width="10dp"
                 android:layout_height="10dp"
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="-5dp"
                 android:layout_centerVertical="true"
+                android:layout_marginStart="-5dp"
                 android:background="@drawable/date_card_hole_background" />
 
         </RelativeLayout>
 
     </RelativeLayout>
-
 
 
 </RelativeLayout>
