--- a/app/src/main/res/layout/fragment_movies_seat.xml
+++ b/app/src/main/res/layout/fragment_movies_seat.xml
@@ -40,7 +40,7 @@
 
         </FrameLayout>
 
-        <ScrollView
+        <androidx.core.widget.NestedScrollView
             android:id="@+id/svSeatsMoviesSeat"
             android:layout_width="match_parent"
             android:layout_height="450dp"
@@ -50,24 +50,28 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+                <TextView
+                    android:id="@+id/tvSeatTypeTitleMoviesSeat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:fontFamily="@font/dm_sans"
+                    android:text="@string/normal_4500ks_lbl"
+                    android:textColor="@color/colorPrimaryLight"
+                    android:textSize="@dimen/text_regular_2x" />
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvSeatsMoviesSeat"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    tools:itemCount="3"
-                    tools:listitem="@layout/view_holder_movies_seat_seats_list" />
-
-                <include
-                    layout="@layout/layout_gold_seat_movies_seat"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/rvSeatsMoviesSeat"
-                    android:layout_centerHorizontal="true" />
+                    android:layout_marginTop="@dimen/margin_14dp"
+                    android:layout_below="@+id/tvSeatTypeTitleMoviesSeat"
+                    tools:listitem="@layout/view_holder_movies_seat_list" />
 
             </RelativeLayout>
 
 
-        </ScrollView>
+        </androidx.core.widget.NestedScrollView>
 
         <LinearLayout
             android:id="@+id/llSeatAvailableMoviesSeat"
@@ -170,10 +174,11 @@
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/width_minus_button"
+                android:layout_height="@dimen/width_minus_button"
                 android:layout_gravity="center_vertical"
-                app:srcCompat="@drawable/ic_baseline_add_grey_24dp" />
+                android:scaleType="fitXY"
+                app:srcCompat="@drawable/minus" />
 
             <androidx.appcompat.widget.AppCompatSeekBar
                 android:layout_width="@dimen/width_seek_bar"
@@ -185,11 +190,10 @@
                 android:progressTint="@color/white" />
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="@dimen/width_minus_button"
-                android:layout_height="@dimen/width_minus_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:scaleType="fitXY"
-                app:srcCompat="@drawable/minus" />
+                app:srcCompat="@drawable/ic_baseline_add_grey_24dp" />
 
         </LinearLayout>
 
