--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -90,6 +90,15 @@
         <action
             android:id="@+id/action_moviesSeat_to_moviesFood"
             app:destination="@id/moviesFoodFragment" />
+        <argument
+            android:name="arg_day_timeslot_id"
+            app:argType="integer"
+            android:defaultValue="0" />
+        <argument
+            android:name="arg_booking_date"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
     <fragment
         android:id="@+id/moviesFoodFragment"
